--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PrototypeBelajarKotlin">
+        <activity android:name=".QuizActivity"></activity>
+        <activity
+            android:name=".MateriDetailActivity"
+            android:theme="@style/Theme.PrototypeBelajarKotlin.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -19,6 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MateriActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.PrototypeBelajarKotlin.NoActionBar" />
     </application>
 
 </manifest>
