update: Amir Part

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,8 +54,13 @@ dependencies {
 
 
     // Retrofit + GSON
+    implementation 'com.google.code.gson:gson:2.8.6'
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+
+    // library frogo-recycler-view
+    implementation 'com.github.amirisback:frogo-recycler-view:3.5.0'
 
     //Picaso
     implementation 'com.squareup.picasso:picasso:2.71828'
