--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PrototypeBelajarKotlin">
-        <activity android:name=".QuizActivity"></activity>
+        <activity
+            android:name=".QuizActivity"
+            android:theme="@style/Theme.PrototypeBelajarKotlin.NoActionBar" />
         <activity
             android:name=".MateriDetailActivity"
             android:theme="@style/Theme.PrototypeBelajarKotlin.NoActionBar" />
@@ -17,15 +19,21 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.PrototypeBelajarKotlin.NoActionBar">
-        <activity android:name=".TanyaActivity" />
-        <activity android:name=".JawabActivity" />
-        <activity android:name=".ForumActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".TanyaActivity"
+            android:theme="@style/Theme.PrototypeBelajarKotlin.NoActionBar" />
+        <activity
+            android:name=".JawabActivity"
+            android:theme="@style/Theme.PrototypeBelajarKotlin.NoActionBar" />
+        <activity
+            android:name=".ForumActivity"
+            android:theme="@style/Theme.PrototypeBelajarKotlin.NoActionBar" />
         <activity
             android:name=".MateriActivity"
             android:label="@string/app_name"
